<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationProfessor"
    android:background="@color/black"
    >

    <View
        android:id="@+id/titleBackGround"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:background="#F8885B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/page_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_professor_registration"
        android:textColor="#F8F8F8"

        android:textSize="30sp" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/titleBackGround"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="111dp"
        android:text="@string/username"
        android:textColor="#FDFDFD" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameInput"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/email_address"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/idInput"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@+id/id"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:autofillHints="" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idInput"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:background="#F8885B"
        android:text="@string/register" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/idInput"
        android:layout_marginStart="35dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@id/submitButton"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInput"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/account_password_more_than_8_characters"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/userRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_header"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_registration"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"

        />
</RelativeLayout>