<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F7CE4"
    tools:context=".PostReviewActivity">

    <RatingBar
        android:id="@+id/ratingBar_review"
        android:layout_width="240dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toTopOf="@+id/review_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.488" />

    <ToggleButton
        android:id="@+id/togglebutton"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_marginStart="52dp"
        android:text="@string/togglebutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <EditText
        android:id="@+id/review_text"
        android:layout_width="341dp"
        android:layout_height="265dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="Enter review text here..."
        android:inputType="textMultiLine"
        android:labelFor="@id/review_text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelReviewButton"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:background="#E4855E"
        android:backgroundTint="#F8885B"
        android:foregroundTint="#FFFFFF"
        android:text="@string/cancel"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#FDFDFD"
        android:textColorHint="#D3D3D3"
        android:textColorLink="#FFFFFF"
        app:iconTint="#FA8888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/professorName_PostReview"
        android:layout_width="375dp"
        android:layout_height="111dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/postReview_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/postReview_Button"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:background="#E4855E"
        android:backgroundTint="#F8885B"
        android:foregroundTint="#FFFFFF"
        android:text="@string/post_review"
        android:textColor="#FDFDFD"
        android:textColorHighlight="#FDFDFD"
        android:textColorHint="#D3D3D3"
        android:textColorLink="#FFFFFF"
        app:iconTint="#FA8888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anonymous Review?"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/review_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar_review"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Class Taken:"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/classTakenTextEntryBox"
        android:layout_width="158dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:hint="Enter Class Here..."
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />
</androidx.constraintlayout.widget.ConstraintLayout>